syntax = "proto3";

package proto;

option java_multiple_files = true;
option java_package = "proto";
option java_outer_classname = "TreniProto";

// Servizio per la ricerca dei treni
service TreniCal {
  rpc search (SearchRequest) returns (SearchResponse);
}

message SearchRequest {
  string query = 1;
  string from = 2;
  string to = 3;
}

message SearchResponse {
  repeated Ticket tickets = 1;
}

message Ticket {
  string ticket_id = 1;
  string destination = 2;
  string departure_time = 3;
  float price = 4;
}
